# EasyFinance

./: .gitignore  .pre-commit-config.yaml  CICD_README.md  GIT_COMMIT_GUIDE.md  Makefile  SETUP_COMPLETE.md  commit_changes.sh  docker-compose.yaml  pyproject.toml  pytest.ini
.github/: CICD.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci-cd.yml  codeql.yml  pre-commit.yml  release.yml
src/: Dockerfile  api.py  requirements-dev.txt  requirements.txt
src/auth/: oauth2.py
src/controller/: __init__.py  databaseI.py  sql.py
src/middleware/: auto_refresh.py
src/models/: financial.py  user.py
tests/: README.md  conftest.py  requirements-test.txt  run_tests.py  test_api.py  test_auth_oauth2.py  test_basic.py  test_controller_databaseI.py  test_controller_sql.py  test_main.py  test_middleware_auto_refresh.py  test_models_financial.py  test_models_security.py  test_models_user.py  test_utils.py
